2008-05-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/button.n: Note negative widths for button [Patch #1883418]
	* doc/ttk_*:   'identify' widget command is on all ttk widgets.

2008-05-04  Joe English  <jenglish@users.sourceforge.net>

	* macosx/ttkMacOSAquaTheme.c: "default" and "focus" adornments
	should not be disjoint [Bug 1942785]

2008-04-17  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkCanvas.c:   Fix logic that determines when canvas item
	<Enter> event should fire.  Thanks to Sebastian Wangnick. [Bug 1327482]

2008-04-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinDialog.c: backport tk_chooseColor -title fix from head
	* win/tkWinTest.c:   Added parent to testgetwininfo
	* tests/winDialog.test: Created some tk_chooseColor win tests.

2008-04-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump version number to 8.5.3b1 to distinguish
	* library/tk.tcl:	CVS development snapshots from the 8.5.2 and
	* unix/configure.in:	8.5.3 releases.
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf (2.59)
	* win/configure:

2008-04-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkWindow.c (Initialize): fix double-free on Tk_ParseArgv
	* tests/main.test (main-3.*):      error. [Bug 1937135]

	* generic/tkArgv.c: fix -help mem explosion. [Bug 1936238] (kenny)

2008-04-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/xpTheme.tcl: fix the colour of labelframe in xp

2008-04-01  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkStubLib.c (Tk_InitStubs):	Added missing error message.
	* generic/tkWindow.c (Tk_PkgInitStubsCheck):

2008-03-28  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.2 TAGGED FOR RELEASE ***

	* README:		Bump to 8.5.2 for release.
	* generic/tk.h:
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updates for 8.5.2 release.
