@@ -1,5 +1,7 @@
 2008-05-11  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
+	* library/tk.tcl: Support for ttk widgets in AmpWidget
+
 	* doc/button.n: Note negative widths for button [Patch #1883418]
 	* doc/ttk_*:   'identify' widget command is on all ttk widgets.
 
